[gd_scene load_steps=31 format=3 uid="uid://p27b3attllql"]

[ext_resource type="Theme" uid="uid://cxav2eygb1aru" path="res://Other/new_theme.tres" id="1_i1jpa"]
[ext_resource type="Script" path="res://Scripts/level_select.gd" id="2_6l0xw"]
[ext_resource type="Texture2D" uid="uid://dyhkqjspuiqrw" path="res://Assets/Background/Blue.png" id="2_rtvud"]
[ext_resource type="PackedScene" uid="uid://ur8gu6gbgjed" path="res://Prefab/Transition.tscn" id="3_e3qt4"]
[ext_resource type="Texture2D" uid="uid://bod8m3jhob3ce" path="res://Assets/Menu/Buttons/Back.png" id="4_efpkw"]
[ext_resource type="Texture2D" uid="uid://ddrsr2oe05eg1" path="res://Assets/Menu/Levels/01.png" id="5_vkyck"]
[ext_resource type="Texture2D" uid="uid://bowptucla180l" path="res://Assets/Menu/Buttons/Achievements.png" id="6_0v2y1"]
[ext_resource type="Script" path="res://Scripts/LevelButtonManager.gd" id="6_3hocj"]
[ext_resource type="Texture2D" uid="uid://nmalpwj8bcw6" path="res://Assets/Menu/Levels/02.png" id="6_njjkh"]
[ext_resource type="Texture2D" uid="uid://cbik8ihcjs87q" path="res://Assets/Items/Checkpoints/End/End (Idle).png" id="7_6yg1a"]
[ext_resource type="Script" path="res://Scripts/Button.gd" id="7_s5mik"]
[ext_resource type="Texture2D" uid="uid://df4h64bgruqmu" path="res://Assets/Menu/Levels/03.png" id="7_ynqex"]
[ext_resource type="Texture2D" uid="uid://cuothbix3ub55" path="res://Assets/Menu/Levels/04.png" id="8_pys5i"]
[ext_resource type="Texture2D" uid="uid://tdrncq8ng2ag" path="res://Assets/Menu/Levels/05.png" id="9_lf0xc"]
[ext_resource type="Texture2D" uid="uid://wylu305g4xgh" path="res://Assets/Menu/Levels/06.png" id="10_w57xo"]
[ext_resource type="Texture2D" uid="uid://436aa4vs28og" path="res://Assets/Menu/Levels/07.png" id="11_i1pq3"]
[ext_resource type="Texture2D" uid="uid://bcjajlgsd6txf" path="res://Assets/Menu/Levels/08.png" id="12_k0ou3"]
[ext_resource type="Texture2D" uid="uid://bhgk7hdp35wu0" path="res://Assets/Menu/Levels/09.png" id="13_jfbmb"]
[ext_resource type="Texture2D" uid="uid://bc612mgtd0vwp" path="res://Assets/Menu/Levels/10.png" id="14_qbte2"]
[ext_resource type="Texture2D" uid="uid://c1mmnr0h3kpwg" path="res://Assets/Menu/Levels/11.png" id="15_26a7l"]
[ext_resource type="Texture2D" uid="uid://c8gpream2eshb" path="res://Assets/Menu/Levels/12.png" id="16_jyffp"]
[ext_resource type="Texture2D" uid="uid://djx3a0hxpk7q7" path="res://Assets/Menu/Levels/13.png" id="17_pwfj5"]
[ext_resource type="Texture2D" uid="uid://dm1pnw3qixccf" path="res://Assets/Menu/Levels/14.png" id="18_55l8y"]
[ext_resource type="Texture2D" uid="uid://m85syppe3ut0" path="res://Assets/Menu/Levels/50.png" id="34_gxhky"]

[sub_resource type="Animation" id="Animation_ktebe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-83, -44)]
}

[sub_resource type="Animation" id="Animation_crfdl"]
resource_name = "TitleBackground"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-83, -44), Vector2(-51, -12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pt8gf"]
_data = {
"RESET": SubResource("Animation_ktebe"),
"TitleBackground": SubResource("Animation_crfdl")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m4pij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_solkh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6wsp"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i1jpa")
script = ExtResource("2_6l0xw")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -44.0
offset_right = 1235.0
offset_bottom = 692.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rtvud")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -272.0
offset_right = 182.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.129412, 0.121569, 0.188235, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 90
text = "LEVEL SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pt8gf")
}
autoplay = "TitleBackground"

[node name="Transition" parent="." instance=ExtResource("3_e3qt4")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -175.0
offset_right = 464.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Back" type="Button" parent="Panel"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 929.0
offset_top = 399.0
offset_right = 1009.0
offset_bottom = 479.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_m4pij")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("4_efpkw")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Achievements" type="Button" parent="Panel"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 926.0
offset_top = -124.0
offset_right = 1006.0
offset_bottom = -44.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_m4pij")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("6_0v2y1")
flat = true
icon_alignment = 1
expand_icon = true

[node name="GridContainer" type="HFlowContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -191.0
offset_right = 418.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_3hocj")
metadata/_edit_lock_ = true

[node name="Button1" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("5_vkyck")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button1"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button1"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button1"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button2" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("6_njjkh")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button2"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button2"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button2"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button3" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("7_ynqex")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button3"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button3"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button3"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button4" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("8_pys5i")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button4"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button4"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button4"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button5" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("9_lf0xc")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button5"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button5"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button5"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button6" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("10_w57xo")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button6"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button6"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button6"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button7" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("11_i1pq3")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button7"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button7"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button7"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button8" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("12_k0ou3")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button8"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button8"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button8"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button9" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("13_jfbmb")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button9"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button9"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button9"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button10" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("14_qbte2")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button10"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button10"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button10"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button11" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("15_26a7l")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button11"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button11"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button11"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button12" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("16_jyffp")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button12"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button12"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button12"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button13" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("17_pwfj5")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button13"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button13"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button13"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button14" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("18_55l8y")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button14"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button14"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button14"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Button15" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_i6wsp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_solkh")
icon = ExtResource("34_gxhky")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_s5mik")

[node name="Trophy2" type="Sprite2D" parent="Panel/GridContainer/Button15"]
visible = false
position = Vector2(27, 78)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy1" type="Sprite2D" parent="Panel/GridContainer/Button15"]
visible = false
position = Vector2(51, 84)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[node name="Trophy3" type="Sprite2D" parent="Panel/GridContainer/Button15"]
visible = false
position = Vector2(74, 79)
scale = Vector2(0.4375, 0.4375)
texture = ExtResource("7_6yg1a")

[connection signal="_TransitionFinished" from="Transition" to="." method="_on_canvas_layer__transition_finished"]
[connection signal="button_down" from="Panel/Back" to="." method="_on_back_button_down"]
[connection signal="button_up" from="Panel/Achievements" to="." method="_on_achievements_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button1" to="." method="_on_button_1_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button3" to="." method="_on_button_3_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button4" to="." method="_on_button_4_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button5" to="." method="_on_button_5_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button6" to="." method="_on_button_6_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button7" to="." method="_on_button_7_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button8" to="." method="_on_button_8_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button9" to="." method="_on_button_9_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button10" to="." method="_on_button_10_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button11" to="." method="_on_button_11_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button12" to="." method="_on_button_12_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button13" to="." method="_on_button_13_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button14" to="." method="_on_button_14_button_up"]
[connection signal="button_up" from="Panel/GridContainer/Button15" to="." method="_on_button_15_button_up"]
